# pip-pytest-template

./: README.md  setup.cfg  setup.py
src/mycfg/: loadcfg.py
src/mypkg/: mycalc.py  myexcalc.py
tests/: test_mycfg.py  test_mypkg.py
tests/res/cfgs/: cfg01.yaml  cfg02.yaml  cfg03.yaml
